--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
-      
+    <header class="header visually-hidden">
+
     </header>
-    <main class="main"></main>
-    <footer class="footer"></footer>
+    <main class="main">
+      
+    </main>
+    <footer class="footer visually-hidden"></footer>
 </body>
 </html>
